--- a/opticksgl/tests/CMakeLists.txt
+++ b/opticksgl/tests/CMakeLists.txt
@@ -11,10 +11,10 @@ foreach(SRC ${TEST_SOURCES})
     get_filename_component(TGT ${SRC} NAME_WE)
     add_executable(${TGT} ${SRC})
 
-    if (${TGT} MATCHES ".*Test$")  
+    #if (${TGT} MATCHES ".*Test$")  
        add_test(${name}.${TGT} ${TGT})
        #add_dependencies(check ${TGT})
-    endif()
+    #endif()
 
     target_link_libraries(${TGT} OpticksGL )
     install(TARGETS ${TGT} DESTINATION lib)
