--- a/optixrap/CMakeLists.txt
+++ b/optixrap/CMakeLists.txt
@@ -1,21 +1,3 @@
-#[=[
-OptiXRap
-===========
-
-OptiXRap package needs help to find the OptiX libraries in the form of 
-cmake invocation argument::
-
-    -DOptiX_INSTALL_DIR=$(opticks-optix-install-dir)
-
-This seems appropriate, however currently all downstream packages
-need to repeat this argument ... which seems silly in a BCM world 
-if imported targets.
-
-Finding OKConf before including OpticksBuildOptions
-allows the CUDA_NVCC_FLAGS to incorporate the COMPUTE_CAPABILITY 
-from the OKConf BCM generated TOPMATTER. 
-
-#]=]
 cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
 set(name OptiXRap)
 project(${name} VERSION 0.1.0)
@@ -137,16 +119,14 @@ set(CU_HEADERS
 CUDA_WRAP_SRCS( ${name} PTX _generated_PTX_files ${CU_SOURCES} )
 CUDA_WRAP_SRCS( ${name} OBJ _generated_OBJ_files ${SOURCES} )  
 
-if(OptiXRap_VERBOSE)
-  message(STATUS "${name}._generated_PTX_files : ${_generated_PTX_files} ")
-  message(STATUS "${name}._generated_OBJ_files : ${_generated_OBJ_files} ")
-endif()
-
 
 add_library( ${name} SHARED ${_generated_OBJ_files} ${_generated_PTX_files} ${SOURCES} )
-# (?) PTX are not archived in the lib, it is just expedient to list them as sources
-# of the lib target so they get hooked up as dependencies, and thus are generated before 
-# they need to be installed 
+#[=[
+The PTX are not archived in the lib, it is just expedient to list them as sources
+of the lib target so they get hooked up as dependencies, and thus are generated before 
+they need to be installed 
+#]=]
+
 
 target_link_libraries( ${name} PUBLIC  
   Opticks::OptiX
@@ -156,21 +136,17 @@ target_link_libraries( ${name} PUBLIC
 
 target_include_directories( ${name} PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}> )
 
-echo_target_std(${name})
+if(OptiXRap_VERBOSE)
+  message(STATUS "${name}._generated_PTX_files : ${_generated_PTX_files} ")
+  message(STATUS "${name}._generated_OBJ_files : ${_generated_OBJ_files} ")
+  echo_target_std(${name})
+endif()
 
 install(FILES ${_generated_PTX_files} DESTINATION installcache/PTX)
 install(FILES ${CU_HEADERS}           DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/cu)
 install(FILES ${HEADERS}              DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 
-
 bcm_deploy(TARGETS ${name} NAMESPACE Opticks:: SKIP_HEADER_INSTALL )
-
-# attempting to move TOPMATTER to OKConf
-#   TOPMATTER "
-#set(OptiX_INSTALL_DIR ${OptiX_INSTALL_DIR})
-#message(STATUS \"\${CMAKE_CURRENT_LIST_FILE} : OptiX_INSTALL_DIR : \${OptiX_INSTALL_DIR} \")
-#" )
-
 
 add_subdirectory(tests)
 
