simplify config of subproj loggers using WITH_SUBPROJ defines for each and umbrella OPTICKS_LOG control, needed especially for embedded usage of Opticks to reduce the real-estate needed in the main

--- a/boostrap/CMakeLists.txt
+++ b/boostrap/CMakeLists.txt
@@ -107,6 +107,8 @@ target_include_directories( ${name} PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
     $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/inc>
 )
+target_compile_definitions( ${name} PUBLIC WITH_BRAP )
+
 
 target_link_libraries( ${name} PUBLIC 
    Opticks::PLog
