--- a/g4ok/CMakeLists.txt
+++ b/g4ok/CMakeLists.txt
@@ -11,12 +11,14 @@ find_package(G4DAE  REQUIRED CONFIG)
 
 
 set(SOURCES
-    G4OKMgr.cc
+    G4OpticksManager.cc
 
     G4OK_LOG.cc
 )
 set(HEADERS
-    G4OKMgr.hh
+    G4OpticksManager.hh
+    G4OpticksScintillationStep.hh
+    G4OpticksCerenkovStep.hh
 
     G4OK_LOG.hh
     G4OK_API_EXPORT.hh
@@ -29,10 +31,14 @@ add_library(${name} SHARED  ${SOURCES})
 target_link_libraries( ${name} 
   PUBLIC 
      Opticks::G4
-  PRIVATE
      Opticks::G4DAE
      Opticks::OKOP
 )
+## hmm these need to be public for the tests to see the includes of 
+## the dependencies and their deps and so on 
+
+target_compile_definitions( ${name} PUBLIC WITH_G4OK )
+
 target_include_directories( ${name} PUBLIC 
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}> 
 )
@@ -40,5 +46,5 @@ target_include_directories( ${name} PUBLIC
 install(FILES ${HEADERS}  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 bcm_deploy(TARGETS ${name} NAMESPACE Opticks:: SKIP_HEADER_INSTALL)
 
-#add_subdirectory(tests)
+add_subdirectory(tests)
 
