--- a/npy/CMakeLists.txt
+++ b/npy/CMakeLists.txt
@@ -356,6 +356,8 @@ target_include_directories( ${name} PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
 ) 
 
+target_compile_definitions( ${name} PUBLIC WITH_NPY )
+
 target_link_libraries( ${name} 
   PUBLIC 
      Opticks::GLM
