--- a/sysrap/CMakeLists.txt
+++ b/sysrap/CMakeLists.txt
@@ -19,6 +19,7 @@ find_package(OKConf REQUIRED CONFIG)
 find_package(PLog   REQUIRED MODULE)
 
 set(SOURCES
+    OPTICKS_LOG.cc
     SYSRAP_LOG.cc 
     PLOG.cc 
     SProc.cc
@@ -45,6 +46,7 @@ set(SOURCES
 ) 
 
 set(HEADERS
+    OPTICKS_LOG.hh
     SYSRAP_LOG.hh
     SYSRAP_API_EXPORT.hh
     SYSRAP_HEAD.hh
@@ -85,7 +87,7 @@ if(UNIX)
 target_link_libraries( ${name} PUBLIC ssl crypto )
 endif()
 
-set(SysRap_VERBOSE ON)
+set(SysRap_VERBOSE OFF)
 if(SysRap_VERBOSE)
   echo_target_std(Opticks::OKConf) 
   #echo_target_std(${name}) 
@@ -94,6 +96,8 @@ endif()
 target_include_directories( ${name} PUBLIC 
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
 )
+target_compile_definitions( ${name} PUBLIC WITH_SYSRAP )
+
 
 
 bcm_deploy(TARGETS ${name} NAMESPACE Opticks:: SKIP_HEADER_INSTALL)
