--- a/openmeshrap/CMakeLists.txt
+++ b/openmeshrap/CMakeLists.txt
@@ -29,6 +29,7 @@ set(HEADERS
 
 add_library( ${name}  SHARED ${SOURCES})
 target_include_directories( ${name} PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}> )
+target_compile_definitions( ${name} PUBLIC WITH_MESHRAP )
 target_link_libraries( ${name} PUBLIC  Opticks::OpticksCore Opticks::GGeo )
 
 bcm_deploy(TARGETS ${name} NAMESPACE Opticks:: SKIP_HEADER_INSTALL)
