--- a/opticksgeo/CMakeLists.txt
+++ b/opticksgeo/CMakeLists.txt
@@ -34,6 +34,7 @@ set(HEADERS
 
 add_library( ${name}  SHARED ${SOURCES})
 target_include_directories( ${name} PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}> )
+target_compile_definitions( ${name} PUBLIC WITH_OKGEO )
 target_link_libraries( ${name} PUBLIC  Opticks::OpticksCore Opticks::AssimpRap Opticks::OpenMeshRap )
 
 bcm_deploy(TARGETS ${name} NAMESPACE Opticks:: SKIP_HEADER_INSTALL)
