--- a/sysrap/tests/CMakeLists.txt
+++ b/sysrap/tests/CMakeLists.txt
@@ -25,6 +25,8 @@ set(TEST_SOURCES
    SYSRAP_LOG_Test.cc 
    SYSRAP_LOG_FileAppenderTest.cc
 
+   S_OPTICKS_LOG_Test.cc
+
    OpticksCSGTest.cc
    hash_define_without_value.cc
    SDirectTest.cc 
