--- a/ok/CMakeLists.txt
+++ b/ok/CMakeLists.txt
@@ -26,7 +26,7 @@ add_library(${name} SHARED  ${SOURCES})
 
 target_link_libraries( ${name} PUBLIC Opticks::OpticksGL )
 target_include_directories( ${name} PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}> )
-target_compile_definitions( ${name} PUBLIC WITH_OPTIX WITH_OK ) 
+target_compile_definitions( ${name} PUBLIC OPTICKS_OPTIX OPTICKS_OK ) 
 
 install(FILES ${HEADERS}  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 bcm_deploy(TARGETS ${name} NAMESPACE Opticks:: SKIP_HEADER_INSTALL)
