--- a/sysrap/CMakeLists.txt
+++ b/sysrap/CMakeLists.txt
@@ -96,7 +96,7 @@ endif()
 target_include_directories( ${name} PUBLIC 
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
 )
-target_compile_definitions( ${name} PUBLIC WITH_SYSRAP )
+target_compile_definitions( ${name} PUBLIC OPTICKS_SYSRAP )
 
 
 
