sysrap-genlog to generate the main logging setup, OPTICKS_LOG.hh : header only implementation as it must be compiled into the executable main rather than libs

--- a/boostrap/tests/CMakeLists.txt
+++ b/boostrap/tests/CMakeLists.txt
@@ -34,6 +34,7 @@ set(TEST_SOURCES
    boost_random_minimal_Test.cc
 
    BConverterTest.cc 
+   BRAP_OPTICKS_LOG_Test.cc
 )
 
 # BTimeTest.cc requires boost components : thread timer 
