--- a/examples/UseYoctoGL/CMakeLists.txt
+++ b/examples/UseYoctoGL/CMakeLists.txt
@@ -3,16 +3,26 @@ set(name UseYoctoGL)
 project(${name})
 include(OpticksBuildOptions)
 
-#set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)  
+find_package(YoctoGL REQUIRED CONFIG)  # from /usr/local/opticks/externals/lib/cmake/yoctogl/  
 
-find_package(YoctoGL REQUIRED CONFIG)   
+set(YoctoGL_VERBOSE OFF)
+if(YoctoGL_VERBOSE)
+    message(STATUS "YoctoGL_DIR   : ${YoctoGL_DIR} ")
+    message(STATUS "YoctoGL_FOUND : ${YoctoGL_FOUND} ")
+    echo_target_std(Opticks::YoctoGL)
+endif()
 
-message(STATUS "YoctoGL_DIR   : ${YoctoGL_DIR} ")
-message(STATUS "YoctoGL_FOUND : ${YoctoGL_FOUND} ")
-echo_target_std(Opticks::YoctoGL)
+set(TEST_SOURCES
+   ${name}.cc
+   ${name}_Write.cc
+)
 
-add_executable(${name} ${name}.cc)
-target_link_libraries(${name} PUBLIC Opticks::YoctoGL)
+foreach(TEST_SOURCE ${TEST_SOURCES})
+    get_filename_component(TGT ${TEST_SOURCE} NAME_WE)
+    add_executable(${TGT} ${TEST_SOURCE})
+    target_link_libraries(${TGT} PUBLIC Opticks::YoctoGL)
+    install(TARGETS ${TGT} DESTINATION lib)
+endforeach()
 
-install(TARGETS ${name}  DESTINATION lib)
+
 
